--- a/.k8s/staging/deployment.yaml
+++ b/.k8s/staging/deployment.yaml
@@ -113,3 +113,85 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: SENTRY_DSN
+        - name: laa-court-data-ui-metrics
+          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
+          imagePullPolicy: Always
+          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
+          ports:
+          - containerPort: 9394
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          env:
+            - name: ENV
+              value: 'staging'
+            - name: RACK_ENV
+              value: 'production'
+            - name: RAILS_ENV
+              value: 'production'
+            - name: DOMAIN_URL
+              value: 'https://staging.view-court-data.service.justice.gov.uk'
+            - name: COURT_DATA_ADAPTOR_API_URL
+              value: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
+            - name: RAILS_SERVE_STATIC_FILES
+              value: enabled
+            - name: GA_TRACKING_ID
+              value: 'UA-131160087-14'
+            - name: RAILS_LOG_TO_STDOUT
+              value: enabled
+            - name: DISPLAY_RAW_RESPONSES
+              value: enabled
+            - name: COURT_DATA_ADAPTOR_API_UID
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_ADAPTOR_API_UID
+            - name: COURT_DATA_ADAPTOR_API_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_ADAPTOR_API_SECRET
+            - name: SECRET_KEY_BASE
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: SECRET_KEY_BASE
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-rds
+                  key: url
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-elasticache
+                  key: url
+            - name: ADMIN_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: ADMIN_PASSWORD
+            - name: CASEWORKER_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: CASEWORKER_PASSWORD
+            - name: MANAGER_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: MANAGER_PASSWORD
+            - name: GOVUK_NOTIFY_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: GOVUK_NOTIFY_API_KEY
