--- a/.k8s/staging/deployment-metrics.yaml
+++ b/.k8s/staging/deployment-metrics.yaml
@@ -19,7 +19,7 @@ spec:
         - name: laa-court-data-ui-metrics
           imagePullPolicy: Always
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
-          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
+          command: ['sh', '-c', "bundle exec prometheus_exporter"]
           ports:
           - containerPort: 9394
           livenessProbe:
@@ -41,48 +41,3 @@ spec:
             requests:
               cpu: 10m
               memory: 64Mi
-          env:
-            - name: ENV
-              value: 'staging'
-            - name: RACK_ENV
-              value: 'production'
-            - name: RAILS_ENV
-              value: 'production'
-            - name: DOMAIN_URL
-              value: 'https://staging.view-court-data.service.justice.gov.uk'
-            - name: COURT_DATA_ADAPTOR_API_URL
-              value: https://laa-court-data-adaptor-staging.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
-            - name: RAILS_SERVE_STATIC_FILES
-              value: enabled
-            - name: RAILS_LOG_TO_STDOUT
-              value: enabled
-            - name: COURT_DATA_ADAPTOR_API_UID
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-secrets
-                  key: COURT_DATA_ADAPTOR_API_UID
-            - name: COURT_DATA_ADAPTOR_API_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-secrets
-                  key: COURT_DATA_ADAPTOR_API_SECRET
-            - name: SECRET_KEY_BASE
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-secrets
-                  key: SECRET_KEY_BASE
-            - name: DATABASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-rds
-                  key: url
-            - name: REDIS_URL
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-elasticache
-                  key: url
-            - name: GOVUK_NOTIFY_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: lcdui-secrets
-                  key: GOVUK_NOTIFY_API_KEY
