Add metrics container to worker pods
Apply image to work metrics container in circleci deploy script

Add metrics container to worker pod on other envs

--- a/.k8s/production/deployment-worker.yaml
+++ b/.k8s/production/deployment-worker.yaml
@@ -85,3 +85,22 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: SENTRY_DSN
+        - name: laa-court-data-ui-metrics
+          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
+          imagePullPolicy: Always
+          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
+          ports:
+          - containerPort: 9394
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+
