--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ MANAGER_PASSWORD: manager-password
 ADMIN_PASSWORD: admin-password
 # COURT_DATA_ADAPTOR_API_URL: http://localhost:9292/api/internal/v1
 GA_TRACKING_ID: UA-XXXXXXXXX-XX
-DISPLAY_RAW_RESPONSES: true
+DISPLAY_RAW_RESPONSES: enabled
