--- a/spec/fixtures/vcr_cassettes/spec/features/search/case_reference_spec.yml
+++ b/spec/fixtures/vcr_cassettes/spec/features/search/case_reference_spec.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:9292/api/internal/v1/prosecution_cases?filter%5Bprosecution_case_reference%5D=TEST12345&include=defendants,defendants.offences,hearing_summaries,hearings,hearings.hearing_events
+    uri: http://localhost:9292/api/internal/v1/prosecution_cases?filter%5Bprosecution_case_reference%5D=TEST12345&include=defendants,defendants.offences,hearing_summaries,hearings,hearings.hearing_events,hearings.providers,hearings.cracked_ineffective_trial
     body:
       encoding: US-ASCII
       base64_string: ''
@@ -1177,7 +1177,7 @@ http_interactions:
   recorded_at: Mon, 19 Oct 2020 12:31:35 GMT
 - request:
     method: get
-    uri: http://localhost:9292/api/internal/v1/prosecution_cases?filter%5Bprosecution_case_reference%5D=NONEXISTENTCASEURN&include=defendants,defendants.offences,hearing_summaries,hearings,hearings.hearing_events,hearings.providers
+    uri: http://localhost:9292/api/internal/v1/prosecution_cases?filter%5Bprosecution_case_reference%5D=NONEXISTENTCASEURN&include=defendants,defendants.offences,hearing_summaries,hearings,hearings.hearing_events,hearings.providers,hearings.cracked_ineffective_trial
     body:
       encoding: US-ASCII
       base64_string: ''
