--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,7 @@ commands:
     steps:
       - run:
           name: Run brakeman
-          command: bundle exec brakeman --quiet --exit-on-warn
+          command: bundle exec brakeman
 
   rspec:
     steps:
