--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "validate:scss": "stylelint **/*.scss"
   },
   "dependencies": {
+    "@ministryofjustice/frontend": "^0.2.1",
     "@rails/ujs": "^6.1.3",
     "@rails/webpacker": "5.2.1",
     "govuk-frontend": "^3.11.0"
