Amend hearing paginator sorting
Must match that in the prosecution case
hearing summaries list.

Notes:
  1. Exclude hearing_paginator.rb from Rails/HelperInstanceVariable cop

  This helper is a class that is instantiated
  once per controller instantiation. As such
  it does not make sense to apply the
  Rails/HelperInstanceVariable cop to it at all.

 2. Use @prosecution_case instance var directly

  Since it is not part of, nor needed for the
  public api this can more simply be referred
  to via the instance var itself.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -93,6 +93,10 @@ Performance/StringInclude:
 Rails/FilePath:
   Enabled: false
 
+Rails/HelperInstanceVariable:
+  Exclude:
+    - app/helpers/hearing_paginator.rb
+
 Rails/OutputSafety:
   Exclude:
     - lib/gds_design_system_breadcrumb_builder.rb
