--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "resolutions": {
     "dot-prop": "^5.2.0",
     "http-proxy": "^1.18.1",
+    "is-svg": "^4.3.1",
     "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
     "node-forge": "^0.10.0",
