--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "minimist": "^1.2.2",
     "node-forge": "^0.10.0",
     "serialize-javascript": "^3.1.0",
+    "ssri": "^8.0.1",
     "webpack": "^4.44.2"
   },
   "standard": {
