--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,15 +274,15 @@ jobs:
       - checkout
       - run:
           name: Package for upload to Veracode
-          command: 'zip -r ${CIRCLE_PROJECT_REPONAME}.zip'
+          command: zip -r ${CIRCLE_PROJECT_REPONAME}.zip
       - sast-orb/policy-scan:
-          appname: '${CIRCLE_PROJECT_REPONAME}'
+          appname: ${CIRCLE_PROJECT_REPONAME}
           createprofile: false
-          filepath: '${CIRCLE_PROJECT_REPONAME}.zip'
+          filepath: ${CIRCLE_PROJECT_REPONAME}.zip
           teams: Development
-          version: 'CircleCI - ${CIRCLE_SHA1:0:7} - $CIRCLE_BUILD_NUM'
-          vid: '${VERACODE_API_ID}'
-          vkey: '${VERACODE_API_KEY}'
+          version: CircleCI - ${CIRCLE_SHA1:0:7} - $CIRCLE_BUILD_NUM
+          vid: ${VERACODE_API_ID}
+          vkey: ${VERACODE_API_KEY}
 
 # ------------------
 # WORKFLOWS
