ACC-11: Remove master branch restriction to test on pre-prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -329,10 +329,8 @@ workflows:
             - hold-production
       - veracode-scan:
           context: VERACODE
-          filters:
-            branches:
-              only:
-                - main
+          requires:
+            - build-app-container
 
   test-branch:
     jobs:
