ACC-11: Try to use veracode gem to zip file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,7 +274,9 @@ jobs:
       - checkout
       - run:
           name: Package for upload to Veracode
-          command: zip -r ${CIRCLE_PROJECT_REPONAME}.zip . -i project
+          command: | 
+            bundle update veracode
+            mv tmp/veracode-${CIRCLE_PROJECT_REPONAME}-*.zip ${CIRCLE_PROJECT_REPONAME}.zip
       - sast-orb/policy-scan:
           appname: ${CIRCLE_PROJECT_REPONAME}
           filepath: ${CIRCLE_PROJECT_REPONAME}.zip
