ACC-11: call gem install veracode

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,6 +275,8 @@ jobs:
       - run:
           name: Package for upload to Veracode
           command: | 
+            gem install veracode
+            veracode prepare
             mv tmp/veracode-${CIRCLE_PROJECT_REPONAME}-*.zip ${CIRCLE_PROJECT_REPONAME}.zip
       - sast-orb/policy-scan:
           appname: ${CIRCLE_PROJECT_REPONAME}
