ACC-11: go back to zip command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,9 +275,8 @@ jobs:
       - run:
           name: Package for upload to Veracode
           command: | 
-            gem install veracode
-            veracode prepare
-            mv tmp/veracode-${CIRCLE_PROJECT_REPONAME}-*.zip ${CIRCLE_PROJECT_REPONAME}.zip
+            pwd
+            zip -r ${CIRCLE_PROJECT_REPONAME}.zip . -i project
       - sast-orb/policy-scan:
           appname: ${CIRCLE_PROJECT_REPONAME}
           filepath: ${CIRCLE_PROJECT_REPONAME}.zip
