ACC-11: change directory earlier in script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,8 +275,8 @@ jobs:
       - run:
           name: Package for upload to Veracode
           command: | 
-            pwd
-            zip -r ../${CIRCLE_PROJECT_REPONAME}.zip . -i project
+            cd ../
+            zip -r ${CIRCLE_PROJECT_REPONAME}.zip . -i project
       - sast-orb/policy-scan:
           appname: ${CIRCLE_PROJECT_REPONAME}
           filepath: ${CIRCLE_PROJECT_REPONAME}.zip
