--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,7 +137,16 @@ commands:
       - run:
           name: Run brakeman
           command: bundle exec brakeman
-
+  
+  veracode:
+      - run:
+          name: Package Veracode
+          command: bundle exec veracode prepare
+      - run:
+          name: Move Veracode Zip
+          command: |
+            cd project/tmp
+            mv veracode-*.zip ${CIRCLE_PROJECT_REPONAME}.zip
   rspec:
     steps:
       - db-setup
@@ -273,14 +282,7 @@ jobs:
     steps:
       - checkout
       - build-base
-      - run:
-          name: Package Veracode
-          command: bundle exec veracode prepare
-      - run:
-          name: Move Veracode Zip
-          command: |
-            cd project/tmp
-            mv veracode-*.zip ${CIRCLE_PROJECT_REPONAME}.zip
+      - veracode
       - sast-orb/policy-scan:
           appname: ${CIRCLE_PROJECT_REPONAME}
           filepath: ${CIRCLE_PROJECT_REPONAME}.zip
