Use test config for veracode
This is handle rails config that should be false
for veracode - see [ruby compilation](https://help.veracode.com/r/compilation_ruby)
```
config.cache_classes = false
```

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,8 +144,7 @@ commands:
           name: Package Veracode
           command: |
             cd repo
-            bundle exec veracode prepare
-
+            RAILS_ENV=test bundle exec veracode prepare
 
   rspec:
     steps:
