--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,8 @@ updates:
     timezone: Europe/London
   open-pull-requests-limit: 10
   reviewers:
-  - jsugarman
   - kmahern
-  - jrmhaig
+  - mabely
   ignore:
   - dependency-name: simplecov
     versions:
@@ -53,7 +52,7 @@ updates:
     timezone: Europe/London
   open-pull-requests-limit: 10
   reviewers:
-  - naseberry
+  - malcolmvonmoj
   ignore:
   - dependency-name: webpack
     versions:
