--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
     "node-forge": "^0.10.0",
+    "normalize-url": "^4.5.1",
     "serialize-javascript": "^3.1.0",
     "ssri": "^8.0.1",
     "webpack": "^4.44.2"
