--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "resolutions": {
+    "css-what": "^5.0.1",
     "dot-prop": "^5.2.0",
     "hosted-git-info": "^3.0.8",
     "http-proxy": "^1.18.1",
