--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-COURT_DATA_ADAPTOR_API_URL: http://localhost:9292/api/internal/v1
+COURT_DATA_ADAPTOR_API_URL: http://localhost:9292/api/internal/
 COURT_DATA_ADAPTOR_API_UID: test-app-id
 COURT_DATA_ADAPTOR_API_SECRET: test-app-secret
 COURT_DATA_ADAPTOR_API_TEST_MODE: true
