--- a/spec/fixtures/vcr_cassettes/spec/lib/court_data_adaptor/query/defendant/by_uuid_spec.yml
+++ b/spec/fixtures/vcr_cassettes/spec/lib/court_data_adaptor/query/defendant/by_uuid_spec.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:9292/api/internal/v1/defendants/b3221b46-b98c-47b7-a285-be681d2cac4e?include=offences
+    uri: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v2/defendants/8b7a9989-84ba-493d-8780-a97465872c53?include=offences
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.17.3
+      - Faraday v1.1.0
       Content-Type:
       - application/vnd.api+json
       Accept:
@@ -22,6 +22,14 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Date:
+      - Tue, 06 Jul 2021 08:52:47 GMT
+      Content-Type:
+      - application/vnd.api+json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
       X-Frame-Options:
       - SAMEORIGIN
       X-Xss-Protection:
@@ -35,22 +43,24 @@ http_interactions:
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Laa-Transaction-Id:
-      - 46c9028b-a221-4cb6-a0e2-743e91f61805
-      Content-Type:
-      - application/vnd.api+json; charset=utf-8
+      - c236027ba520827f0f2bdef503625145
+      Vary:
+      - Accept
       Etag:
-      - W/"8a5a37ff0751d533b43da7d1e8610e74"
+      - W/"81bebd2e07e5f2996b6bf7b6594e7045"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 46c9028b-a221-4cb6-a0e2-743e91f61805
+      - c236027ba520827f0f2bdef503625145
       X-Runtime:
-      - '0.006283'
-      Transfer-Encoding:
-      - chunked
+      - '1.935789'
+      Strict-Transport-Security:
+      - max-age=15724800; includeSubDomains
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"b3221b46-b98c-47b7-a285-be681d2cac4e","type":"defendants","attributes":{"name":"Jesus
-        D''Amore O''Reilly","date_of_birth":"1992-06-03","national_insurance_number":"EL059689D","arrest_summons_number":"DMGJ9IJW8PHP","maat_reference":null,"representation_order_date":null},"relationships":{"offences":{"data":[{"id":"1b3a9f10-cf0a-43aa-b0bb-9e4ecd1e94c0","type":"offences"}]},"defence_organisation":{"data":null}}}}'
-  recorded_at: Tue, 04 Aug 2020 09:55:12 GMT
+      string: '{"data":{"id":"8b7a9989-84ba-493d-8780-a97465872c53","type":"defendants","attributes":{"name":"Jammy
+        Dodger","date_of_birth":"1987-05-21","national_insurance_number":"JC123456A","arrest_summons_number":"1PBAP0Q18V3F","maat_reference":null,"representation_order_date":null,"prosecution_case_id":"1897a40c-78a1-4acd-a4aa-27202876856f","post_hearing_custody_statuses":["A"]},"relationships":{"offences":{"data":[{"id":"177f2564-6e9d-4a9f-9ed6-9e5d7cb2eb6b","type":"offences"}]},"defence_organisation":{"data":null},"prosecution_case":{"data":{"id":"1897a40c-78a1-4acd-a4aa-27202876856f","type":"prosecution_case"}}}},"included":[{"id":"177f2564-6e9d-4a9f-9ed6-9e5d7cb2eb6b","type":"offences","attributes":{"code":"PT00011","order_index":1,"title":"Racially-aggravated
+        criminal damage","legislation":"Sexual Offences Act 1956 s.19","mode_of_trial":"Summary
+        offence","mode_of_trial_reasons":[],"pleas":[]}}]}'
+  recorded_at: Tue, 06 Jul 2021 08:52:47 GMT
 recorded_with: VCR 6.0.0
