--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.21.1",
   "scripts": {
     "validate:js": "standard",
-    "validate:scss": "stylelint **/*.scss"
+    "validate:scss": "stylelint **/*.scss",
+    "cypress:open": "yarn run cypress open"
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^0.2.5",
@@ -13,6 +14,7 @@
     "govuk-frontend": "^3.13.0"
   },
   "devDependencies": {
+    "cypress": "^7.7.0",
     "standard": "^16.0.3",
     "stylelint": "^13.13.1",
     "stylelint-config-gds": "^0.1.0",
