--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,9 +210,10 @@ commands:
       - run:
           name: Install Docker Compose
           command: |
+            apt install sudo
             curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
             chmod +x ~/docker-compose
-            mv ~/docker-compose /usr/local/bin/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
           name: Cypress Tests
           command: docker-compose up --exit-code-from cypress
