--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,6 +164,9 @@ commands:
     steps:
       - db-setup
       - run:
+          name: Pre-install packages
+          command: yarn install --frozen-lockfile
+      - run:
           name: Run Cypress tests
           command: yarn run cypress:run
 
