--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,8 +164,8 @@ commands:
     steps:
       - db-setup
       - run:
-          name: Pre-install packages
-          command: yarn install --frozen-lockfile
+          name: start server
+          command: RUBYOPT=-W:no-deprecated bundle exec puma
       - run:
           name: Run Cypress tests
           command: yarn run cypress:run
